# demo_i2c

./: CMakeLists.txt  README.md  main.camkes  system_config.h
components/i2c/: CMakeLists.txt  I2C.c  I2C.camkes  i2c.c  i2c.camkes  if_I2C.camkes  imx6_i2c.c
components/i2c/include/: arm_i2c.h  clock.h  if_I2C.camkes  imx6_i2c.h  services.h
components/i2c/src/plat/sabre/: imx6_i2c.c  plat_i2c.camkes  plat_i2c.cmake
components/master/: Master.camkes  master.c  master.camkes
plat/sabre/: plat_system_config.h
